--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
     "@mui/x-data-grid": "^6.9.0",
+    "axios": "^1.4.0",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
     "moment": "^2.29.4",
